--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <version>1.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.21</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <scriptSourceDirectory>vars</scriptSourceDirectory>
