Use the jenkins maven central repo as https://repo.maven.apache.org/maven2/com/lesfurets/jenkins-pipeline-unit/ doesn't have the latest release

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
         <groovy-eclipse-compiler.version>3.4.0-01</groovy-eclipse-compiler.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
