--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         </dependency>
     </dependencies>
     <build>
-        <testSourceDirectory>src/test/groovy</testSourceDirectory>
+        <testSourceDirectory>test/groovy</testSourceDirectory>
         <resources>
             <resource>
                 <directory>resources</directory>
