--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Dependency versions -->
         <groovy.version>3.0.7</groovy.version>
-        <junit.version>4.13.1</junit.version>
+        <junit.version>5.7.0</junit.version>
         <jenkins-pipeline-unit.version>1.8</jenkins-pipeline-unit.version>
         <groovy-eclipse-compiler.version>3.6.0-03</groovy-eclipse-compiler.version>
     </properties>
@@ -48,8 +48,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
