--- a/pom.xml
+++ b/pom.xml
@@ -67,13 +67,12 @@
         </dependency>
     </dependencies>
     <build>
-        <testSourceDirectory>test/groovy</testSourceDirectory>
+        <testSourceDirectory>.</testSourceDirectory>
         <resources>
             <resource>
                 <directory>resources</directory>
             </resource>
         </resources>
-        <scriptSourceDirectory>vars</scriptSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.groovy</groupId>
@@ -86,6 +85,11 @@
                 <version>3.8.1</version>
                 <configuration>
                     <compilerId>groovy-eclipse-compiler</compilerId>
+                    <includes>
+                        <include>src/**/*.groovy</include>
+                        <include>test/**/*.groovy</include>
+                        <include>vars/**.*.groovy</include>
+                    </includes>
                 </configuration>
                 <dependencies>
                     <dependency>
