--- a/resources/io/jenkins/infra/docker/pod-template.yml
+++ b/resources/io/jenkins/infra/docker/pod-template.yml
@@ -4,36 +4,12 @@ kind: "Pod"
 metadata:
   labels:
     jenkins: "agent"
+    job/kind: "docker-image-build"
+    docker-image/name: "${IMAGE_NAME}"
   annotations:
     container.apparmor.security.beta.kubernetes.io/builder: unconfined
     container.seccomp.security.alpha.kubernetes.io/builder: unconfined
 spec:
-  tolerations:
-  - key: "os"
-    operator: "Equal"
-    value: "linux"
-    effect: "NoSchedule"
-  - key: "profile"
-    operator: "Equal"
-    value: "highmem"
-    effect: "NoSchedule"
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-        - matchExpressions:
-          - key: kubernetes.io/os
-            operator: In
-            values:
-            - linux
-      preferredDuringSchedulingIgnoredDuringExecution:
-      - weight: 1
-        preference:
-          matchExpressions:
-          - key: agentpool
-            operator: In
-            values:
-            - highmemlinux
   restartPolicy: "Never"
   containers:
     - name: builder
