Fix reports recording and test that fail fast work as expected
Signed-off-by: dduportal <damien.duportal@gmail.com>

--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -51,6 +51,7 @@ clean: ## Delete any file generated during the build steps
 
 test: ## Execute the test harness on the Docker Image archive at $(IMAGE_ARCHIVE)
 	@echo "== Testing $(IMAGE_NAME) from $(IMAGE_ARCHIVE)..."
+	@echo "Writing test report to $(PWD)/cst-result.xml..."
 	@container-structure-test test --driver=tar --image=$(IMAGE_ARCHIVE) --config=$(PWD)/cst.yml
 	@echo "== Test ✅ Succeeded"
 
