--- a/updatecli/updatecli.d/jx-next-version.yml
+++ b/updatecli/updatecli.d/jx-next-version.yml
@@ -12,14 +12,14 @@ sources:
       versionFilter:
         kind: semver
 
-# https://github.com/updatecli/updatecli/issues/365
-# conditions:
-#   checkIfDockerImageIsPublished:
-#     name: "Check if the Docker Image is published"
-#     kind: dockerImage
-#     spec:
-#       hostname: 'ghcr.io'
-#       image: 'jenkins-x/jx-release-version'
+conditions:
+  checkIfDockerImageIsPublished:
+    name: "Check if the Docker Image is published"
+    kind: dockerImage
+    spec:
+      image: 'ghcr.io/jenkins-x/jx-release-version'
+      username: "{{ .github.username }}"
+      password: "{{ requiredEnv .github.token }}"
 
 targets:
   updateGroovyCode:
