--- a/updatecli/updatecli.d/docker-helmfile.yml
+++ b/updatecli/updatecli.d/docker-helmfile.yml
@@ -1,5 +1,18 @@
 ---
 title: "Bump docker-helmfile version on shared library resources"
+
+scms:
+  default:
+    kind: github
+    spec:
+      user: "{{ .github.user }}"
+      email: "{{ .github.email }}"
+      owner: "{{ .github.owner }}"
+      repository: "{{ .github.repository }}"
+      token: "{{ requiredEnv .github.token }}"
+      username: "{{ .github.username }}"
+      branch: "{{ .github.branch }}"
+
 sources:
   lastVersion:
     kind: githubRelease
@@ -30,15 +43,7 @@ targets:
         'jenkinsciinfra/helmfile:(.*)'
       replacepattern: >-
         'jenkinsciinfra/helmfile:{{ source `lastVersion` }}'
-    scm:
-      github:
-        user: "{{ .github.user }}"
-        email: "{{ .github.email }}"
-        owner: "{{ .github.owner }}"
-        repository: "{{ .github.repository }}"
-        token: "{{ requiredEnv .github.token }}"
-        username: "{{ .github.username }}"
-        branch: "{{ .github.branch }}"
+    scmID: default
   updateDoc:
     name: Update docker-helmfile in documentation
     kind: file
@@ -46,12 +51,13 @@ targets:
       file: vars/updatecli.txt
       matchpattern: jenkinsciinfra/helmfile:(\d\.\d\.\d)
       replacepattern: jenkinsciinfra/helmfile:{{ source `lastVersion` }}
-    scm:
-      github:
-        user: "{{ .github.user }}"
-        email: "{{ .github.email }}"
-        owner: "{{ .github.owner }}"
-        repository: "{{ .github.repository }}"
-        token: "{{ requiredEnv .github.token }}"
-        username: "{{ .github.username }}"
-        branch: "{{ .github.branch }}"
+    scmID: default
+
+
+pullrequests:
+  default:
+    kind: github
+    scmID: default
+    targets:
+      - updateGroovyCode
+      - updateDoc
