chore(updatecli) fix regexp to handle semver properly even when more thant 1 digit
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/updatecli.d/docker-builder.yml
+++ b/updatecli/updatecli.d/docker-builder.yml
@@ -51,8 +51,8 @@ targets:
     kind: file
     spec:
       file: vars/buildDockerAndPublishImage.txt
-      matchpattern: jenkinsciinfra/builder:(\d\.\d\.\d)
-      replacepattern: jenkinsciinfra/builder:{{ source `lastVersion` }}
+      matchpattern: jenkinsciinfra/builder:(\d+\.\d+\.\d+)\"
+      replacepattern: jenkinsciinfra/builder:{{ source `lastVersion` }}"
     scmID: default
 
 pullrequests:
