--- a/updatecli/updatecli.d/docker-helmfile.yml
+++ b/updatecli/updatecli.d/docker-helmfile.yml
@@ -50,10 +50,9 @@ targets:
     kind: file
     spec:
       file: vars/updatecli.txt
-      matchpattern: jenkinsciinfra/helmfile:(\d\.\d\.\d)
-      replacepattern: jenkinsciinfra/helmfile:{{ source `lastVersion` }}
+      matchpattern: jenkinsciinfra/helmfile:(\d+\.\d+\.\d+)\"
+      replacepattern: jenkinsciinfra/helmfile:{{ source `lastVersion` }}"
     scmID: default
-
 
 pullrequests:
   default:
