feat(buildDockerAndPublishImage) allow using hadolint container
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -10,6 +10,7 @@ TEST_HARNESS ?= $(IMAGE_DIR)/cst.yml
 
 ## Use this variable if you want to use Docker instead
 CONTAINER_BIN ?= img
+HADOLINT_BIN ?= hadolint
 
 ## Image metadatas
 GIT_COMMIT_REV ?= $(shell git log -n 1 --pretty=format:'%h')
