feat(buildDockerAndPublishImage) allow building on VM agent with Docker Engine (#311)
* feat(buildDockerAndPublishImage) allow building on VM agent with Docker Engine

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* feat(buildDockerAndPublishImage) allow using hadolint container

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* feat(buildDockerAndPublishImage) support 2 kinds of label policy for VM agents

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* feat(buildDockerAndPublishImage) support test harness with Docker driver + auto-installation

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* doc

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

* nitpicks

Co-authored-by: Hervé Le Meur <91831478+lemeurherve@users.noreply.github.com>

--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -8,15 +8,24 @@ IMAGE_PLATFORM ?= linux/amd64
 HADOLINT_REPORT ?= $(IMAGE_DIR)/hadolint.json
 TEST_HARNESS ?= $(IMAGE_DIR)/cst.yml
 
-## Use this variable if you want to use Docker instead
+## Locate command line tools. Defaults to rely on PATH
 CONTAINER_BIN ?= img
-
+HADOLINT_BIN ?= hadolint
+CST_BIN ?= container-structure-test
 
 ## Image metadatas
 GIT_COMMIT_REV ?= $(shell git log -n 1 --pretty=format:'%h')
 GIT_SCM_URL ?= $(shell git config --get remote.origin.url)
 SCM_URI ?= $(subst git@github.com:,https://github.com/,$(GIT_SCM_URL))
 BUILD_DATE ?= $(shell date --utc '+%Y-%m-%dT%H:%M:%S' 2>/dev/null || gdate --utc '+%Y-%m-%dT%H:%M:%S')
+
+## Test Harness settings
+CST_DRIVER ?= tar # https://github.com/GoogleContainerTools/container-structure-test#running-file-tests-without-docker
+ifeq ($(CST_DRIVER),tar)
+CST_SUT = $(IMAGE_ARCHIVE)
+else
+CST_SUT = $(IMAGE_NAME)
+endif
 
 help: ## Show this Makefile's help
 	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
@@ -26,13 +35,13 @@ all: clean lint build test ## Execute the complete process except the "deploy" s
 lint: ## Lint the $(IMAGE_DOCKERFILE) content
 	@echo "== Linting $(IMAGE_DOCKERFILE)..."
 	@echo "Writing Lint results to $(HADOLINT_REPORT)"
-	@hadolint --format=json $(IMAGE_DOCKERFILE) > $(HADOLINT_REPORT)
+	@$(HADOLINT_BIN) --format=json - < $(IMAGE_DOCKERFILE) > $(HADOLINT_REPORT)
 	@echo "== Lint ✅ Succeeded"
 
 build: ## Build the Docker Image $(IMAGE_NAME) from $(IMAGE_DOCKERFILE) and export it to $(IMAGE_ARCHIVE)
 	@echo "== Building $(IMAGE_NAME) from $(IMAGE_DOCKERFILE)..."
 	@$(CONTAINER_BIN) build \
-		-t $(IMAGE_NAME) \
+		--tag $(IMAGE_NAME) \
 		--build-arg "GIT_COMMIT_REV=$(GIT_COMMIT_REV)" \
 		--build-arg "GIT_SCM_URL=$(GIT_SCM_URL)" \
 		--build-arg "BUILD_DATE=$(BUILD_DATE)" \
@@ -45,9 +54,8 @@ build: ## Build the Docker Image $(IMAGE_NAME) from $(IMAGE_DOCKERFILE) and expo
 		--label "org.opencontainers.image.created=$(BUILD_DATE)" \
 		--label "org.label-schema.build-date=$(BUILD_DATE)" \
 		--platform $(IMAGE_PLATFORM) \
-		-f $(IMAGE_DOCKERFILE) \
+		--file $(IMAGE_DOCKERFILE) \
 		$(IMAGE_DIR)
-	@$(CONTAINER_BIN) save --output=$(IMAGE_ARCHIVE) $(IMAGE_NAME)
 	@echo "== Build ✅ Succeeded, image $(IMAGE_NAME) exported to $(IMAGE_ARCHIVE)."
 
 clean: ## Delete any file generated during the build steps
@@ -57,7 +65,10 @@ clean: ## Delete any file generated during the build steps
 
 test: ## Execute the test harness on the Docker Image archive at $(IMAGE_ARCHIVE)
 	@echo "== Test $(IMAGE_NAME) with $(TEST_HARNESS) from $(IMAGE_ARCHIVE)..."
-	@container-structure-test test --driver=tar --image=$(IMAGE_ARCHIVE) --config=$(TEST_HARNESS)
+ifeq ($(CST_DRIVER),tar)
+	$(CONTAINER_BIN) save --output=$(IMAGE_ARCHIVE) $(IMAGE_NAME)
+endif
+	$(CST_BIN) test --driver=$(CST_DRIVER) --image=$(CST_SUT) --config=$(TEST_HARNESS)
 	@echo "== Test ✅ Succeeded"
 
 ## This steps expects that you are logged to the Docker registry to push image into
