--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -14,16 +14,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+      - name: Updatecli Version
+        uses: updatecli/updatecli-action@v1.30.0
+        with:
+          command: version
+          flags: ""
+        env:
+          UPDATECLI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Diff
-        uses: updatecli/updatecli-action@v1
+        uses: updatecli/updatecli-action@v1.30.0
         with:
           command: diff
           flags: "--config ./updatecli/updatecli.d --values ./updatecli/values.yaml"
         env:
           UPDATECLI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Apply
-        uses: updatecli/updatecli-action@v1
+        uses: updatecli/updatecli-action@v1.30.0
         if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
         with:
           command: apply
