--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -1,6 +1,6 @@
 
 IMAGE_NAME ?= helloworld
-IMAGE_DEPLOY_NAME ?= $(IMAGE_NAME)
+IMAGE_DEPLOY_NAME ?= example/$(IMAGE_NAME)
 IMAGE_DIR ?= $(PWD)
 IMAGE_DOCKERFILE ?= $(IMAGE_DIR)/Dockerfile
 IMAGE_ARCHIVE ?= $(IMAGE_DIR)/image.tar
