FixPath in Makefile

--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -1,9 +1,10 @@
 # Windows detection
 ifeq '$(findstring ;,$(PATH))' ';'
-	# FixPath = $(subst /,\,$1)
+	FixPath = $(subst /,\,$1)
 	IMAGE_DIR = .
 	IMAGE_PLATFORM_ARG = --platform "windows/amd64"
 else
+	FixPath = $1
 	IMAGE_DIR ?= $(PWD)
 	IMAGE_PLATFORM_ARG ?= --platform "linux/amd64"
 endif
@@ -41,13 +42,13 @@ help: ## Show this Makefile's help
 all: clean lint build test ## Execute the complete process except the "deploy" step
 
 lint: ## Lint the $(IMAGE_DOCKERFILE) content
-	@echo "== Linting $(IMAGE_DOCKERFILE) with $(HADOLINT_BIN):"
-	@echo "Writing Lint results to $(HADOLINT_REPORT)"
-	@$(HADOLINT_BIN) --format=json $(IMAGE_DOCKERFILE) > $(HADOLINT_REPORT)
+	@echo "== Linting $(call FixPath,$(IMAGE_DOCKERFILE)) with $(HADOLINT_BIN):"
+	@echo "Writing Lint results to $(call FixPath,$(HADOLINT_REPORT))"
+	@$(HADOLINT_BIN) --format=json $(call FixPath,$(IMAGE_DOCKERFILE)) > $(call FixPath,$(HADOLINT_REPORT))
 	@echo "== Lint succeeded"
 
 build: ## Build the Docker Image $(IMAGE_NAME) from $(IMAGE_DOCKERFILE)
-	@echo "== Building $(IMAGE_NAME) from '$(IMAGE_DOCKERFILE)' with $(CONTAINER_BIN):"
+	@echo "== Building $(IMAGE_NAME) from $(call FixPath,$(IMAGE_DOCKERFILE)) with $(CONTAINER_BIN):"
 	@$(CONTAINER_BIN) build \
 		--tag $(IMAGE_NAME) \
 		--build-arg "GIT_COMMIT_REV=$(GIT_COMMIT_REV)" \
@@ -62,22 +63,22 @@ build: ## Build the Docker Image $(IMAGE_NAME) from $(IMAGE_DOCKERFILE)
 		--label "org.opencontainers.image.created=$(BUILD_DATE)" \
 		--label "org.label-schema.build-date=$(BUILD_DATE)" \
 		$(IMAGE_PLATFORM_ARG) \
-		--file $(IMAGE_DOCKERFILE) \
+		--file $(call FixPath,$(IMAGE_DOCKERFILE)) \
 		$(IMAGE_DIR)
 	@echo "== Build succeeded"
 
 clean: ## Delete any file generated during the build steps
 	@echo "== Cleaning working directory $(IMAGE_DIR) from generated artefacts:"
-	@rm -f $(IMAGE_DIR)/*.tar $(HADOLINT_REPORT)
+	@rm -f $(call FixPath,$(IMAGE_DIR)/*.tar) $(HADOLINT_REPORT)
 	@echo "== Cleanup succeeded"
 
 test: ## Execute the test harness on the Docker Image (archived as $(IMAGE_ARCHIVE) if using tar CST driver)
-	@echo "== Test $(IMAGE_NAME) with $(TEST_HARNESS) from $(CST_SUT) with $(CST_BIN):"
+	@echo "== Test $(IMAGE_NAME) with $(call FixPath,$(TEST_HARNESS)) from $(CST_SUT) with $(CST_BIN):"
 ifeq ($(CST_DRIVER),tar)
-	@echo "== Image $(IMAGE_NAME) exported to $(IMAGE_ARCHIVE) for test."
-	$(CONTAINER_BIN) save --output=$(IMAGE_ARCHIVE) $(IMAGE_NAME)
+	@echo "== Image $(IMAGE_NAME) exported to $(call FixPath,$(IMAGE_ARCHIVE)) for test."
+	$(CONTAINER_BIN) save --output=$(call FixPath,$(IMAGE_ARCHIVE)) $(IMAGE_NAME)
 endif
-	$(CST_BIN) test --driver=$(CST_DRIVER) --image=$(CST_SUT) --config=$(TEST_HARNESS)
+	$(CST_BIN) test --driver=$(CST_DRIVER) --image=$(CST_SUT) --config=$(call FixPath,$(TEST_HARNESS))
 	@echo "== Test succeeded"
 
 ## This steps expects that you are logged to the Docker registry to push image into
