--- a/resources/io/jenkins/infra/docker/Makefile
+++ b/resources/io/jenkins/infra/docker/Makefile
@@ -50,7 +50,8 @@ lint: ## Lint the $(IMAGE_DOCKERFILE) content
 	@echo "WORKSPACE: $(WORKSPACE)"
 	@echo "IMAGE_DIR: $(IMAGE_DIR)"
 	@echo "DOCKERFILE_FULL_PATH: $(DOCKERFILE_FULL_PATH)"
-	ls -r $(call FixPath,$(HADOLINT_REPORT)/maven/jdk8)
+	ls -r $(call FixPath,$(IMAGE_DIR))
+	ls -r $(call FixPath,$(IMAGE_DIR)/maven/jdk8)
 	$(HADOLINT_BIN) --format=json $(DOCKERFILE_FULL_PATH) > $(call FixPath,$(HADOLINT_REPORT))
 	@echo "== Lint succeeded"
 
