chore(updatecli) fix typo

--- a/updatecli/updatecli.d/terraform-hashicorp.yml
+++ b/updatecli/updatecli.d/terraform-hashicorp.yml
@@ -1,4 +1,4 @@
-title: Bump `hashicorp-tools` docker image version from lastest image release
+title: Bump `hashicorp-tools` docker image
 
 scms:
   default:
